<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center" > 

    <TextView
        android:id="@+id/tytul"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="60sp"
        android:text="@string/app_name" />
    
    <Button
        android:id="@+id/nowaGra"
        android:height="60sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nowaGra" 
        android:textSize="20sp" />
    <Button
        android:id="@+id/informacje"
        android:height="60sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/informacje" 
        android:textSize="20sp" />
    <Button
        android:id="@+id/wyjscie"
        android:height="60sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wyjscie" 
        android:textSize="20sp" />

</LinearLayout>
