<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/weatherFragRoot"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal" >

	<GridView 
	    android:id="@+id/gridview"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:listSelector="@android:color/transparent"
	    android:numColumns="10" > 
    </GridView>
    
	<TextView
        android:id="@+id/dostepne"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/gridview"
    	android:text="@string/dostepneStatki" />
	<ImageView
        android:id="@+id/cztero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:contentDescription="@string/czteromasztowiec"
        android:layout_below="@id/dostepne"
        android:src="@drawable/cztero" />
	<TextView
        android:id="@+id/czteroLiczba"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/cztero"
    	android:layout_below="@id/dostepne" />
	<ImageView
        android:id="@+id/troj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:contentDescription="@string/trojmasztowiec"
        android:layout_below="@id/cztero"
        android:src="@drawable/troj" />
		<TextView
        android:id="@+id/trojLiczba"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/troj"
    	android:layout_below="@id/cztero" />
	<ImageView
        android:id="@+id/dwu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:contentDescription="@string/dwumasztowiec"
        android:layout_below="@id/troj"
        android:src="@drawable/dwu" />
		<TextView
        android:id="@+id/dwuLiczba"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/dwu"
    	android:layout_below="@id/troj" />
	<ImageView
        android:id="@+id/jedno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:contentDescription="@string/jednomasztowiec"
        android:layout_below="@id/dwu"
        android:src="@drawable/jedno" />
		<TextView
        android:id="@+id/jednoLiczba"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/jedno"
    	android:layout_below="@id/dwu" />
   	
	<Button
        android:id="@+id/right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/jednoLiczba"
        android:layout_centerHorizontal="true"
        android:text="@string/planszaPrzeciwnikaButton" />
	<Button
        android:id="@+id/zatwierdz"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/jednoLiczba"
        android:layout_centerHorizontal="true"
        android:text="@string/zatwierdzButton" />

</RelativeLayout>